# wasm-gzip

./: .gitignore  .prettierrc  Cargo.toml  README.md  build  build.bat  package.json  package.release.json  playwright.config.ts  rollup.config.js  tsconfig.json
pkg/: .gitignore  README.md  package.json
pkg/tests/: browser-largefile.html  browser-largefile.js  browser.html  browser.js  test-data.json
src/: lib.rs
src/rs/: lib.rs  state.rs
src/ts/: module.ts  wasm_gzip.ts
tests/: browser.test.ts  index.html  tsconfig.json
tests/browser/: binary.js  decompress-invalid.js  hello multi.js  hello world.js  utf8.js  zero-copy.js
