[package]
name = "wasm-gzip"
version = "2.0.0"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/ColinTimBarndt/wasm-gzip"
description = "Compress and decompress data on the web using WebAssembly."
keywords = ["wasm", "gzip", "compression", "web"]
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2.84"
libflate = "1.3.0"
wee_alloc = "0.4.5"
js-sys = "0.3.61"

[profile.release]
opt-level = "s"
debug = true
