[package]
name = "wasm-gzip"
version = "2.0.3"
authors = ["ColinTimBarndt <colin.barndt@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/ColinTimBarndt/wasm-gzip"
description = "Compress and decompress data on the web using WebAssembly."
keywords = ["wasm", "gzip", "compression", "web"]
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
libflate = "2.1.0"

[profile.release]
opt-level = "s"
debug = true
