[package]
name = "wasm-gzip"
version = "2.1.0"
authors = ["Colin Tim Barndt <contact@colintimbarndt.de>"]
license = "Unlicense"
repository = "https://github.com/ColinTimBarndt/wasm-gzip"
description = "Compress and decompress data on the web using WebAssembly."
keywords = ["wasm", "gzip", "compression", "web"]
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
bitflags = "2.5.0"
libflate = "2.1.0"

[profile.release]
opt-level = "s"
debug = true
